@@ -548,6 +548,9 @@
       their argument list were incorrect. (\PR{15690})
       
       \item Bug fixes to methods::callGeneric. (\PR{15691})
+      
+      \item The bug fix to \code{aggregrate()} in \PR{15004} introduced 
+      a new bug in the case of no grouping variables. (\PR{15699})
     }
   }
 }
